Harden POM parsing and example instructions